# neoversity-ml-final

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/experiments/: manual_lightgbmprep_r31.yaml
docs/: project-context.md
docs/architecture/: current-state.md
docs/benchmarks/: autogluon.md  kaggle_submissions.csv
docs/reproducibility/: baseline_manifest.yaml
notebooks/: 01_data_audit.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_catboost_baseline.ipynb  05_lightgbm_baseline.ipynb  06_xgboost_baseline.ipynb  07_model_comparison.ipynb  08_submission.ipynb
sandbox/autogluon/: README.md  check_environment.py  requirements-autogluon.txt
scripts/: run_experiment.py
src/churn_ml/: config.py  data.py  experiment.py  features.py  manual_lightgbm.py  metrics.py  modeling.py  run_artifacts.py  target_encoding.py  visualization.py
src/churn_ml/models/: catboost.py  lightgbm.py  xgboost.py
tests/: test_manual_config.py  test_manual_lightgbm.py  test_manual_lightgbm_parity.py  test_run_artifacts.py  test_target_encoding.py
